retrieveUnpackaged/objects/ContactUserRelation__c.object
<CustomObject>
    <description>The ContactUserRelation object relates a Contact to another Contact and/or another User. One record can have more 1 or more relationship type. Currently, HR Supervisor relationship and BAPM Approver relationships are allowed. ETL from PASTA populate...</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact User Relationships (Contact)</relationshipLabel>
        <relationshipName>paultests_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact User Relationships (Contact2)</relationshipLabel>
        <relationshipName>RelatedContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ContactUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HR Supervisor</fullName>
                </value>
                <value>
                    <fullName>BAPM Approver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact User Relationship</label>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact User Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>